manifests/traffics-shiny/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffics
  namespace: traffics
  labels:
    app: traffics
spec:
  ports:
  - name: ui
    port: 3838
    targetPort: ui
  selector:
    app: traffics
